rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_open*(options: ptr rocksdb_options_t; name: cstring; errptr: cstringArray): ptr rocksdb_t {.
    cdecl, importc: "rocksdb_open", dynlib: librocksdb.}
proc rocksdb_open_with_ttl*(options: ptr rocksdb_options_t; name: cstring; ttl: cint;
                           errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_with_ttl", dynlib: librocksdb.}
proc rocksdb_open_for_read_only*(options: ptr rocksdb_options_t; name: cstring;
                                error_if_wal_file_exists: uint8;
                                errptr: cstringArray): ptr rocksdb_t {.cdecl,
    importc: "rocksdb_open_for_read_only", dynlib: librocksdb.}
proc rocksdb_open_as_secondary*(options: ptr rocksdb_options_t; name: cstring;
                               secondary_path: cstring; errptr: cstringArray): ptr rocksdb_t {.
    cdecl, importc: "rocksdb_open_as_secondary", dynlib: librocksdb.}
proc rocksdb_backup_engine_open*(options: ptr rocksdb_options_t; path: cstring;
                                errptr: cstringArray): ptr rocksdb_backup_engine_t {.
    cdecl, importc: "rocksdb_backup_engine_open", dynlib: librocksdb.}
proc rocksdb_backup_engine_open_opts*(options: ptr rocksdb_backup_engine_options_t;
                                     env: ptr rocksdb_env_t; errptr: cstringArray): ptr rocksdb_backup_engine_t {.
    cdecl, importc: "rocksdb_backup_engine_open_opts", dynlib: librocksdb.}
proc rocksdb_backup_engine_create_new_backup*(be: ptr rocksdb_backup_engine_t;
    db: ptr rocksdb_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_create_new_backup", dynlib: librocksdb.}
proc rocksdb_backup_engine_create_new_backup_flush*(
    be: ptr rocksdb_backup_engine_t; db: ptr rocksdb_t; flush_before_backup: uint8;
    errptr: cstringArray) {.cdecl, importc: "rocksdb_backup_engine_create_new_backup_flush",
                          dynlib: librocksdb.}
proc rocksdb_backup_engine_purge_old_backups*(be: ptr rocksdb_backup_engine_t;
    num_backups_to_keep: uint32; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_purge_old_backups", dynlib: librocksdb.}
proc rocksdb_restore_options_create*(): ptr rocksdb_restore_options_t {.cdecl,
    importc: "rocksdb_restore_options_create", dynlib: librocksdb.}
proc rocksdb_restore_options_destroy*(opt: ptr rocksdb_restore_options_t) {.cdecl,
    importc: "rocksdb_restore_options_destroy", dynlib: librocksdb.}
proc rocksdb_restore_options_set_keep_log_files*(
    opt: ptr rocksdb_restore_options_t; v: cint) {.cdecl,
    importc: "rocksdb_restore_options_set_keep_log_files", dynlib: librocksdb.}
proc rocksdb_backup_engine_verify_backup*(be: ptr rocksdb_backup_engine_t;
    backup_id: uint32; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_verify_backup", dynlib: librocksdb.}
proc rocksdb_backup_engine_restore_db_from_latest_backup*(
    be: ptr rocksdb_backup_engine_t; db_dir: cstring; wal_dir: cstring;
    restore_options: ptr rocksdb_restore_options_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_backup_engine_restore_db_from_latest_backup",
    dynlib: librocksdb.}
proc rocksdb_backup_engine_restore_db_from_backup*(
    be: ptr rocksdb_backup_engine_t; db_dir: cstring; wal_dir: cstring;
    restore_options: ptr rocksdb_restore_options_t; backup_id: uint32;
    errptr: cstringArray) {.cdecl, importc: "rocksdb_backup_engine_restore_db_from_backup",
                          dynlib: librocksdb.}
proc rocksdb_backup_engine_get_backup_info*(be: ptr rocksdb_backup_engine_t): ptr rocksdb_backup_engine_info_t {.
    cdecl, importc: "rocksdb_backup_engine_get_backup_info", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_count*(info: ptr rocksdb_backup_engine_info_t): cint {.
    cdecl, importc: "rocksdb_backup_engine_info_count", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_timestamp*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): int64 {.cdecl,
    importc: "rocksdb_backup_engine_info_timestamp", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_backup_id*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): uint32 {.cdecl,
    importc: "rocksdb_backup_engine_info_backup_id", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_size*(info: ptr rocksdb_backup_engine_info_t;
                                     index: cint): uint64 {.cdecl,
    importc: "rocksdb_backup_engine_info_size", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_number_files*(
    info: ptr rocksdb_backup_engine_info_t; index: cint): uint32 {.cdecl,
    importc: "rocksdb_backup_engine_info_number_files", dynlib: librocksdb.}
proc rocksdb_backup_engine_info_destroy*(info: ptr rocksdb_backup_engine_info_t) {.
    cdecl, importc: "rocksdb_backup_engine_info_destroy", dynlib: librocksdb.}
proc rocksdb_backup_engine_close*(be: ptr rocksdb_backup_engine_t) {.cdecl,
    importc: "rocksdb_backup_engine_close", dynlib: librocksdb.}
proc rocksdb_put_with_ts*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                         key: cstring; keylen: csize_t; ts: cstring; tslen: csize_t;
                         val: cstring; vallen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_put_with_ts", dynlib: librocksdb.}
proc rocksdb_put_cf_with_ts*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                            column_family: ptr rocksdb_column_family_handle_t;
                            key: cstring; keylen: csize_t; ts: cstring;
                            tslen: csize_t; val: cstring; vallen: csize_t;
                            errptr: cstringArray) {.cdecl,
    importc: "rocksdb_put_cf_with_ts", dynlib: librocksdb.}
proc rocksdb_delete_with_ts*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                            key: cstring; keylen: csize_t; ts: cstring;
                            tslen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete_with_ts", dynlib: librocksdb.}
proc rocksdb_delete_cf_with_ts*(db: ptr rocksdb_t;
                               options: ptr rocksdb_writeoptions_t; column_family: ptr rocksdb_column_family_handle_t;
                               key: cstring; keylen: csize_t; ts: cstring;
                               tslen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_delete_cf_with_ts", dynlib: librocksdb.}
proc rocksdb_singledelete*(db: ptr rocksdb_t; options: ptr rocksdb_writeoptions_t;
                          key: cstring; keylen: csize_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_singledelete", dynlib: librocksdb.}
proc rocksdb_singledelete_cf*(db: ptr rocksdb_t;
                             options: ptr rocksdb_writeoptions_t;
                             column_family: ptr rocksdb_column_family_handle_t;
                             key: cstring; keylen: csize_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_singledelete_cf", dynlib: librocksdb.}
proc rocksdb_singledelete_with_ts*(db: ptr rocksdb_t;
                                  options: ptr rocksdb_writeoptions_t;
                                  key: cstring; keylen: csize_t; ts: cstring;
                                  tslen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_singledelete_with_ts", dynlib: librocksdb.}
proc rocksdb_singledelete_cf_with_ts*(db: ptr rocksdb_t;
                                     options: ptr rocksdb_writeoptions_t;
    column_family: ptr rocksdb_column_family_handle_t; key: cstring; keylen: csize_t;
                                     ts: cstring; tslen: csize_t;
                                     errptr: cstringArray) {.cdecl,
    importc: "rocksdb_singledelete_cf_with_ts", dynlib: librocksdb.}
proc rocksdb_increase_full_history_ts_low*(db: ptr rocksdb_t;
    column_family: ptr rocksdb_column_family_handle_t; ts_low: cstring;
    ts_lowlen: csize_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_increase_full_history_ts_low", dynlib: librocksdb.}
proc rocksdb_get_full_history_ts_low*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                                     ts_lowlen: ptr csize_t; errptr: cstringArray): cstring {.
    cdecl, importc: "rocksdb_get_full_history_ts_low", dynlib: librocksdb.}
##  BackupEngineOptions
